# lm-polygraph

./: .dockerignore  .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  CPMI_and_semantic_uncertanty_examples.ipynb  Dockerfile  LICENSE.md  README.md  calculate_supervised_cocoa.py  documentation_improvements.md  documentation_templates.md  documentation_update_summary.md  estimator_selection_guide.md  example.ipynb  main.py  model_adapters_documentation_summary.md  print_first_input_cont.py  pyproject.toml  requirements.txt  run.py  run_md_1.sh  run_md_2.sh  run_medqa_eval.sh  run_sims_exps.sh  run_token_exps.sh  setup.py  some3  test_model_api.py  ugrip_run_benchmark.slurm  vizualization.ipynb
app/: index.js  package-lock.json  package.json  parsers.py  service.py
dataset_builders/: README.md  build_dataset.py  manager.py  publish_all_datasets.sh  script.py  template_readme.md  validate_datasets.py
docs/: advanced_usage.rst  benchmarking.rst  conf.py  design.rst  index.rst  lm_polygraph.app.rst  lm_polygraph.estimators.rst  lm_polygraph.generation_metrics.rst  lm_polygraph.stat_calculators.rst  lm_polygraph.ue_metrics.rst  lm_polygraph.utils.ensemble_utils.rst  lm_polygraph.utils.prompt_templates.rst  lm_polygraph.utils.rst  modules.rst  requirements.txt  ue_manager.rst  usage.rst  web_demo.rst
estimators/: __init__.py  attention_entropy.py  black_box_uncertainty.py  bleuvar.py  conditional_mutual_information.py  ensemble_token_measures.py  len_norm_predictive_entropy.py  lexical_similarity.py  mahalanobis_distance.py  max_probability.py  mutual_information.py  p_uncertainty.py  rde.py  semantic_entropy.py  (+4 more)
(+1023 files in other folders)
